Rename project to PastFind and prepare for deployment

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ECHOFIND - Studio</title>
+  <title>PastFind - Studio</title>
   <style>
     /* STYLE GLOBAL - DARK MODE STUDIO */
     body {
@@ -126,7 +126,7 @@
   <div class="container">
     <h1
       style="font-family: 'Arial Black', sans-serif; letter-spacing: 3px; background: linear-gradient(to right, #ff007f, #8A2BE2); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 5px;">
-      ECHOFIND</h1>
+      PastFind</h1>
     <p style="text-transform: uppercase; font-size: 12px; letter-spacing: 2px; opacity: 0.8;">Scanner Musical de
       Précision</p>
 
