--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PastFind - Studio</title>
+  <title>PasteFind - Studio</title>
   <style>
     /* STYLE GLOBAL - DARK MODE STUDIO */
     body {
@@ -125,8 +125,8 @@
 
   <div class="container">
     <h1
-      style="font-family: 'Arial Black', sans-serif; letter-spacing: 3px; background: linear-gradient(to right, #ff007f, #8A2BE2); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 5px;">
-      PastFind</h1>
+      style="font-family: 'Arial Black', sans-serif; letter-spacing: 3px; background: linear-gradient(to right, #ff007f, #8A2BE2); background-clip: text; -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 5px;">
+      PasteFind</h1>
     <p style="text-transform: uppercase; font-size: 12px; letter-spacing: 2px; opacity: 0.8;">Scanner Musical de
       Précision</p>
 
@@ -143,7 +143,7 @@
     async function analyzeMusic() {
       // 🔴 IMPORTANT : Remplacer cette URL par celle de Render une fois déployé
       // Exemple : const API_URL = "https://mon-app.onrender.com/identify";
-      const API_URL = "http://127.0.0.1:8000/identify";
+      const API_URL = "https://pastfind.onrender.com/identify";
 
       const urlInput = document.getElementById('videoUrl').value;
       const resultDiv = document.getElementById('result');
